[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/ui/gameplay/BuildTool/BuildUI.gd" type="Script" id=1]
[ext_resource path="res://src/ui/gameplay/towerInventory/TowerInventory.gd" type="Script" id=2]
[ext_resource path="res://src/ui/gameplay/towerInventory/TowerInventorySlot.gd" type="Script" id=3]
[ext_resource path="res://assets/img/UI/Papyrus Animated Scrolls/02. Static Papyrus/Papyrus Paper 1.png" type="Texture" id=4]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Item Slot/Cartoon RPG UI_Slot - Grade C.png" type="Texture" id=5]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Item Slot/Cartoon RPG UI_Slot - Avatar.png" type="Texture" id=6]
[ext_resource path="res://src/ui/gameplay/BuildTool/buildUISlot.gd" type="Script" id=7]
[ext_resource path="res://assets/img/towers/pixelTowers/Demon_Statue/Demon_Statue_blue_sheet.png" type="Texture" id=8]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Buttons/Disabled/Buttons_Button Disabled - Increase.png" type="Texture" id=9]
[ext_resource path="res://assets/img/towers/pixelTowers/BloodMoonTower_full_version/RedMoonTower_free_idle_animation(Blue).png" type="Texture" id=10]
[ext_resource path="res://assets/img/towers/pixelTowers/FlyingObelisk_Full_v2/FlyingObelisk_no_lightnings_no_letter.png" type="Texture" id=11]
[ext_resource path="res://assets/img/UI/BuildToolUIBackground.png" type="Texture" id=12]
[ext_resource path="res://assets/img/towers/pixelTowers/Obelisk_Full_version/Obelisk(Blue Level 2).png" type="Texture" id=13]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Buttons/Normal/Buttons_Button Normal - Increase.png" type="Texture" id=14]
[ext_resource path="res://assets/img/towers/pixelTowers/LoRTower_Full/EyeTower(Blue Level 1).png" type="Texture" id=15]
[ext_resource path="res://assets/img/towers/pixelTowers/LightningTotemFull/Totem_full-Sheet.png" type="Texture" id=16]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Buttons/Disabled/Buttons_Button Disabled - Info.png" type="Texture" id=17]
[ext_resource path="res://src/ui/gameplay/BuildTool/tower-builds.gd" type="Script" id=18]
[ext_resource path="res://src/ui/gameplay/UI/UI.gd" type="Script" id=19]
[ext_resource path="res://assets/img/UI/Cartoon GUI/PNG/Item Slot/Cartoon RPG UI_Slot - Grade S.png" type="Texture" id=20]
[ext_resource path="res://assets/img/items/Pixel Art Icon Pack - RPG/Equipment/Bag.png" type="Texture" id=21]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 160, 160 )
margin_left = 13.2964
margin_right = 12.1884
margin_top = 13.5051
margin_bottom = 14.4044

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]
content_margin_top = 60.0
content_margin_bottom = 60.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 160, 160 )
margin_left = 13.2964
margin_right = 12.1884
margin_top = 13.5051
margin_bottom = 14.4044

[sub_resource type="GDScript" id=11]
script/source = "extends TextureButton


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="UI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerInventory" type="CanvasLayer" parent="Control"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Control/TowerInventory"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -467.127
margin_top = 188.307
margin_right = -10.1272
margin_bottom = -343.693
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/TowerInventory/TextureRect"]
margin_left = 264.0
margin_top = 360.0
margin_right = 412.0
margin_bottom = 520.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="Control/TowerInventory/TextureRect/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control/TowerInventory/TextureRect/GridContainer/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
texture = ExtResource( 21 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="Control/TowerInventory/TextureRect/GridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control/TowerInventory/TextureRect/GridContainer/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Panel" parent="Control/TowerInventory/TextureRect/GridContainer"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control/TowerInventory/TextureRect/GridContainer/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="Panel" parent="Control/TowerInventory/TextureRect/GridContainer"]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control/TowerInventory/TextureRect/GridContainer/Slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
texture = ExtResource( 21 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TowerInventory/TextureRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 539.195
margin_top = -463.0
margin_right = 771.195
margin_bottom = -291.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control/TowerInventory/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.6748
margin_top = 63.6992
margin_right = 81.3252
margin_bottom = 218.699
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerInspected" type="Panel" parent="Control/TowerInventory/TextureRect/PanelContainer"]
margin_right = 159.0
margin_bottom = 155.0
custom_styles/panel = SubResource( 7 )

[node name="Control" type="Control" parent="Control/TowerInventory/TextureRect"]
anchor_left = 0.729
anchor_right = 0.729
margin_left = -104.153
margin_top = 134.0
margin_right = -103.153
margin_bottom = 134.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildUI" type="CanvasLayer" parent="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BuildUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 800.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control/BuildUI/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 280.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/BuildUI/VBoxContainer/PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.611765 )
margin_right = 1920.0
margin_bottom = 280.0
texture = ExtResource( 12 )
patch_margin_left = 40
patch_margin_right = 120
axis_stretch_horizontal = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Control/BuildUI/VBoxContainer/PanelContainer"]
margin_right = 1920.0
margin_bottom = 280.0
custom_styles/panel = SubResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer"]
margin_top = 60.0
margin_right = 1920.0
margin_bottom = 220.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMode" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 160.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )

[node name="InspectMode" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 330.0
margin_bottom = 160.0
texture_normal = ExtResource( 17 )

[node name="ObeliskTower" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 340.0
margin_right = 500.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/ObeliskTower"]
position = Vector2( 79.6768, 38.0546 )
scale = Vector2( 0.81223, 0.605684 )
texture = ExtResource( 13 )
hframes = 14

[node name="FlyingObelisk" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 510.0
margin_right = 670.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/FlyingObelisk"]
position = Vector2( 74.6506, 69.8009 )
scale = Vector2( 0.677756, 0.412511 )
texture = ExtResource( 11 )
hframes = 14

[node name="LightningTotem" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 680.0
margin_right = 840.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/LightningTotem"]
position = Vector2( 82.8553, 37.525 )
scale = Vector2( 1.59623, 1.57333 )
texture = ExtResource( 16 )
hframes = 16
vframes = 5

[node name="DemonStatue" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 850.0
margin_right = 1010.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/DemonStatue"]
position = Vector2( 84.4443, 54.4763 )
scale = Vector2( 1.58211, 1.12533 )
texture = ExtResource( 8 )
hframes = 31
vframes = 2

[node name="MoonTower" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 1020.0
margin_right = 1180.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/MoonTower"]
position = Vector2( 81.2661, 59.7736 )
scale = Vector2( 1.73396, 1.26406 )
texture = ExtResource( 10 )
hframes = 11

[node name="EyeTower" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer" groups=[
"tower_builds",
]]
margin_left = 1190.0
margin_right = 1350.0
margin_bottom = 160.0
texture_normal = ExtResource( 6 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/EyeTower"]
position = Vector2( 81.796, 67.7196 )
scale = Vector2( 1.78694, 1.62277 )
texture = ExtResource( 15 )
hframes = 14

[node name="GridContainer" type="GridContainer" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer"]
margin_left = 1360.0
margin_right = 1696.0
margin_bottom = 160.0
columns = 5

[node name="Slot1" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot3" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
texture = ExtResource( 21 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot4" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot5" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot6" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot7" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.6689
margin_top = 10.2728
margin_right = -8.33114
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot8" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot8"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot9" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 204.0
margin_top = 68.0
margin_right = 268.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot9"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot10" type="Panel" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer" groups=[
"BuildUISlots",
]]
margin_left = 272.0
margin_top = 68.0
margin_right = 336.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
custom_styles/panel = SubResource( 10 )

[node name="TextureRect" type="TextureRect" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/GridContainer/Slot10"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.409
margin_top = 10.2728
margin_right = -9.59103
margin_bottom = -10.7272
texture = ExtResource( 21 )
expand = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer"]
margin_left = 1706.0
margin_right = 1866.0
margin_bottom = 160.0
toggle_mode = true
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 5 )
script = SubResource( 11 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Build Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Control/TowerInventory/TextureRect/GridContainer/Slot1/TextureRect" to="Control/TowerInventory" method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="Control/TowerInventory/TextureRect/GridContainer/Slot1/TextureRect" to="Control/TowerInventory" method="_on_TextureRect_mouse_entered"]
[connection signal="gui_input" from="Control/TowerInventory/TextureRect/GridContainer/Slot2/TextureRect" to="Control/TowerInventory" method="_on_TextureRect_gui_input"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/BuildMode" to="Control/BuildUI" method="_on_BuildMode_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/InspectMode" to="Control/BuildUI" method="_on_InspectMode_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/ObeliskTower" to="Control/BuildUI" method="_on_ObeliskTower_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/FlyingObelisk" to="Control/BuildUI" method="_on_FlyingObelisk_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/LightningTotem" to="Control/BuildUI" method="_on_LightningTotem_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/DemonStatue" to="Control/BuildUI" method="_on_DemonStatue_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/MoonTower" to="Control/BuildUI" method="_on_MoonTower_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/EyeTower" to="Control/BuildUI" method="_on_EyeTower_pressed"]
[connection signal="pressed" from="Control/BuildUI/VBoxContainer/PanelContainer/PanelContainer/HBoxContainer/TextureButton" to="Control/BuildUI" method="_on_TextureButton_pressed"]
